# reasoning-pruning-data-gen

./: .gitignore  AGENTS.md  README.md  handler.py  opencode.json  pruning-playground.html  pyproject.toml  requirements.txt  server.py
.opencode/agents/: builder.md  builder.memory  manager.md  manager.memory  operator.md  operator.memory  planner.md  planner.memory  researcher.md  researcher.memory  reviewer.md  reviewer.memory
.opencode/skills/: agent-and-skill-improvement  coding-principles  llm-wiki  manage-mcp  manage-skills  pruning-data-training-workflow  scripts
.opencode/skills/huggingface-datasets/: SKILL.md
.opencode/skills/huggingface-inference-endpoints/: SKILL.md
.opencode/skills/litellm-data-generation/: SKILL.md
config/: bbh-logical-deduction-gemma4-hf-preview.toml  bbh-logical-deduction.toml  bbh-multistep-arithmetic.toml  default.toml  gsm8k.toml  strategyqa.toml  svamp.toml
docs/: R1.md  dataset-storage.md  model-interface-options.md  plan.md
experiments/: README.md
experiments/000-template/: README.md
research/: INDEX.md
research/raw/: INDEX.md
research/wiki/: curated-sft-data.md  data-efficient-instruction-tuning.md  data-whisperer.md  delift.md  dora.md  index.md  less.md  log.md  lora.md  quality-over-quantity.md  seedlora.md  sentence-pruning-dataset.md  targeted-data-selection.md
scripts/: create_gemma4_hf_pt_preview.py  create_pruning_dataset.py  llm_client.py  pruning_flow.py  run_hf_job.py  storage.py
tests/: test_pruning_flow.py  test_run_hf_job.py  test_server_artifact_sync.py  test_server_run_stop.py
(+1 files in other folders)
